--- a/portfolio.html
+++ b/portfolio.html
@@ -42,6 +42,16 @@
                     </div>
 
                     <div class="card">
+                        <a href="https://tak-9.github.io/quiz/" target="_blank">
+                        <img src="assets/images/quiz.png" class="card-img-top"></a>
+                        <div class="card-body">
+                            <h4 class="card-title">Quiz</h4>
+                            <p>Multile on-line questions on Javascript and HTML. Answer the question within the specified time frame and record highest score.</p>
+                            <a href="https://github.com/tak-9/quiz" class="button" target="_blank">Github repo</a>
+                        </div>
+                    </div>
+
+                    <div class="card">
                         <a href="https://tak-9.github.io/weather/" target="_blank">
                         <img src="assets/images/weather.png" class="card-img-top"></a>
                         <div class="card-body">
@@ -51,14 +61,6 @@
                         </div>
                     </div>
 
-                    <div class="card">
-                        <a href="https://tak-9.github.io/quiz/" target="_blank">
-                        <img src="assets/images/quiz.png" class="img-fluid"></a>
-                        <div class="card-body">
-                            <p>Multile on-line questions on Javascript and HTML. Answer the question within the specified time frame and record highest score.</p>
-                            <a href="https://github.com/tak-9/quiz" class="button" target="_blank">Github repo</a>
-                        </div>
-                    </div>
                 </div>
             </div>
         </div>
