--- a/portfolio.html
+++ b/portfolio.html
@@ -34,7 +34,7 @@
                         <a href="https://jeqp.github.io/mixer-upper/" target="_blank">
                         <img src="assets/images/mixerupper.png" class="card-img-top"></a>
                         <div class="card-body">
-                            <h4 class="card-title">Mixer Upper</h4>
+                            <h4 class="card-title"><a href="https://jeqp.github.io/mixer-upper/" target="_blank">Mixer Upper</a></h4>
                             <p>Discover and create sophisticated cocktails. Cocktails can be searched by name or by ingredient, and provides a list of ingredients and instructions on how to prepare it.
                             </p>
                             <a href="https://github.com/JEQP/mixer-upper" class="button" target="_blank">Github repo</a>
@@ -45,8 +45,9 @@
                         <a href="https://tak-9.github.io/quiz/" target="_blank">
                         <img src="assets/images/quiz.png" class="card-img-top"></a>
                         <div class="card-body">
-                            <h4 class="card-title">Quiz</h4>
-                            <p>Multile on-line questions on Javascript and HTML. Answer the question within the specified time frame and record highest score.</p>
+                            <h4 class="card-title"><a href="https://tak-9.github.io/quiz/" target="_blank">Coding Quiz Challenge</a></h4>
+                            <p>Multiple on-line questions on Javascript and HTML. Answer the question within the specified time frame and record scores.</p>
+                            <p>Developed for Coding boot camp and received A+ grade. <i>"Your user interface, design and the choice of sounds are great. " Sandesh Pathak</i></p>
                             <a href="https://github.com/tak-9/quiz" class="button" target="_blank">Github repo</a>
                         </div>
                     </div>
@@ -55,8 +56,8 @@
                         <a href="https://tak-9.github.io/weather/" target="_blank">
                         <img src="assets/images/weather.png" class="card-img-top"></a>
                         <div class="card-body">
-                            <h4 class="card-title">Weather Forecast</h4>
-                            <p>Weather dashboard application with search functionality to find current weather conditions and the future weather outlook for multiple cities.</p>
+                            <h4 class="card-title"><a href="https://tak-9.github.io/weather/" target="_blank">Weather Forecast</a></h4>
+                            <p>Developed for Coding boot camp and received A+ grade. <i>"Awesome work. I do not have any feedback except that everything looks smooth and works as it should. Great job on adding all the extra functionalities." Sandesh Pathak</i></p>
                             <a href="https://github.com/tak-9/weather" class="button" target="_blank">Github repo</a>
                         </div>
                     </div>
