--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             currently undertaking 24 weeks of intensive course, Coding Boot Camp, at the University of Sydney. 
           </p>
 
-                      <a class="btn btn-light btn-xl js-scroll-trigger" href="#portfolio">Get Started!</a>
+          <a class="btn btn-light btn-xl js-scroll-trigger" href="#portfolio">Get Started!</a>
         </div>
       </div>
     </div>
@@ -115,17 +115,17 @@
       <h2 class="text-center mt-0">Portfolio</h2>
       <hr class="divider my-4">
 
-      <div class="row">
-        <div class="col-lg-12 text-center">
-          <p class="mb-4">
-            Here are some of the works I created for the Coding Boot Camp Sydney. Watch this space as more works will be added soon...
+      <div class="row justify-content-center">
+        <div class="col-lg-8 text-center">
+          <p>
+            Here are some of the works I created for the Coding Boot Camp Sydney.<br> Watch this space as more works will be added soon...
           </p>
         </div>
       </div>
       
       <div class="row">
         <div class="col-lg-4 col-sm-6">
-          <div class="card">
+          <div class="card shadow">
             <a class="portfolio-box" href="https://jeqp.github.io/mixer-upper/" target="_blank">
               <img src="./img/mixerupper.png" class="card-img-top">
               <div class="portfolio-box-caption">
@@ -135,17 +135,18 @@
             </a>
             <div class="card-body">
               <h4 class="card-title"><a href="https://jeqp.github.io/mixer-upper/" target="_blank">Mixer Upper</a></h4>
-              <p>Discover and create sophisticated cocktails. Cocktails can be searched by name or by ingredient, and
-                provides a list of ingredients and instructions on how to prepare it.
+              <p>Discover and create sophisticated cocktails. Cocktails can be searched and
+                provides instructions on how to prepare it. Shows Cocktail bars in Google Map API.  
               </p>
-              <p>Developed for Coding boot camp Group work and received A+ grade.</p>
-              <a href="https://github.com/JEQP/mixer-upper" class="button" target="_blank">Github repo</a>
+              <p>Developed for Coding Boot Camp group work and received A+ grade.</p>
+              <a href="https://github.com/JEQP/mixer-upper" class="btn btn-outline-primary" target="_blank">Github repo</a>
+              <a href="https://jeqp.github.io/mixer-upper/" class="btn btn-outline-primary" target="_blank">Demo</a>
             </div>
           </div>
         </div>
   
         <div class="col-lg-4 col-sm-6">
-          <div class="card">
+          <div class="card shadow">
             <a class="portfolio-box" href="https://tak-9.github.io/quiz/" target="_blank">
               <img src="./img/quiz.png" class="card-img-top">
               <div class="portfolio-box-caption">
@@ -160,18 +161,19 @@
                 and record scores.</p>
               <p>Developed for Coding Boot Camp and received A+ grade. 
                 <i>"Your user interface, design and the choice of sounds are great. " Sandesh Pathak</i></p>
-              <a href="https://github.com/tak-9/quiz" class="button" target="_blank">Github repo</a>
+              <a href="https://github.com/tak-9/quiz" class="btn btn-outline-primary" target="_blank">Github repo</a>
+              <a href="https://tak-9.github.io/quiz/" class="btn btn-outline-primary" target="_blank">Demo</a>
             </div>
           </div>
         </div>
   
         <div class="col-lg-4 col-sm-6">
-          <div class="card">
+          <div class="card shadow">
             <a class="portfolio-box" href="https://tak-9.github.io/weather/" target="_blank">
               <img src="./img/weather.png" class="card-img-top">
               <div class="portfolio-box-caption">
-                <div class="project-category text-white-50">jQuery Ajax</div>
-                <div class="project-name">Coding Quiz</div>
+                <div class="project-category text-white-50">jQuery and Ajax</div>
+                <div class="project-name">Weather Forecast</div>
               </div>
             </a>
             <div class="card-body">
@@ -180,7 +182,8 @@
               <p>Developed for Coding boot camp and received A+ grade. <i>"Awesome work. I do not have any feedback
                   except that everything looks smooth and works as it should. Great job on adding all the extra
                   functionalities." Sandesh Pathak</i></p>
-              <a href="https://github.com/tak-9/weather" class="button" target="_blank">Github repo</a>
+              <a href="https://github.com/tak-9/weather" class="btn btn-outline-primary" target="_blank">Github repo</a>
+              <a href="https://tak-9.github.io/weather/" class="btn btn-outline-primary" target="_blank">Demo</a>
             </div>
           </div>
         </div> 
@@ -209,7 +212,7 @@
         </div>
       </div>
 
-      <div class="row">
+      <div class="row text-dark">
         <div class="col-lg-3 col-md-6 text-center">
             <div class="mt-5">
             <i class="fas fa-phone fa-4x mb-3"></i>
@@ -219,24 +222,24 @@
 
         <div class="col-lg-3 col-md-6 text-center">
           <div class="mt-5">
-            <a class="d-block" href="mailto:takuji.okubo@gmail.com">
-              <i class="fas fa-envelope fa-4x mb-3 text-dark"></i>
+            <a class="icon" href="mailto:takuji.okubo@gmail.com">
+              <i class="fas fa-envelope fa-4x mb-3"></i>
               <div class="text-dark d-block">takuji.okubo@gmail.com</div></a>
           </div>
         </div>
 
-        <div class="col-lg-3 col-md-6 text-center">
+        <div class="icon col-lg-3 col-md-6 text-center">
           <div class="mt-5">
-            <a href="https://github.com/tak-9" target="_blank">
-            <i class="fa fa-github fa-4x mb-3 text-dark"></i>
+            <a class="icon" href="https://github.com/tak-9" target="_blank">
+            <i class="fa fa-github fa-4x mb-3"></i>
             <div class="text-dark d-block">Github</div></a>
           </div>
         </div>
         
-        <div class="col-lg-3 col-md-6 text-center">
+        <div class="icon col-lg-3 col-md-6 text-center">
           <div class="mt-5">
-            <a href="https://www.linkedin.com/in/takuji-o-85ba94191/" target="_blank">
-            <i class="fa fa-linkedin-square fa-4x mb-3 text-dark"></i>
+            <a class="icon" href="https://www.linkedin.com/in/takuji-o-85ba94191/" target="_blank">
+            <i class="fa fa-linkedin-square fa-4x mb-3"></i>
             <div class="text-dark d-block">LinkedIn</div></a>
           </div>
         </div>
