--- a/index.html
+++ b/index.html
@@ -129,14 +129,14 @@
             <a class="portfolio-box" href="https://jeqp.github.io/mixer-upper/" target="_blank">
               <img src="./img/mixerupper.png" class="card-img-top">
               <div class="portfolio-box-caption">
-                <div class="project-category text-white-50">Ajax and Google Map</div>
+                <div class="project-category text-white-50">jQuery, Ajax and Google Map</div>
                 <div class="project-name">Mixer Upper</div>
               </div>
             </a>
             <div class="card-body">
               <h4 class="card-title"><a href="https://jeqp.github.io/mixer-upper/" target="_blank">Mixer Upper</a></h4>
               <p>Discover and create sophisticated cocktails. Cocktails can be searched and
-                provides instructions on how to prepare it. Shows Cocktail bars in Google Map API.  
+                provides instructions on how to prepare it. Shows Cocktail bars in Google Map using their API.  
               </p>
               <p>Developed for Coding Boot Camp group work and received A+ grade.</p>
               <a href="https://github.com/JEQP/mixer-upper" class="btn btn-outline-primary" target="_blank">Github repo</a>
@@ -179,6 +179,7 @@
             <div class="card-body">
               <h4 class="card-title"><a href="https://tak-9.github.io/weather/" target="_blank">Weather Forecast</a>
               </h4>
+              <p>Shows weather forecast for next 5 days.</p>
               <p>Developed for Coding boot camp and received A+ grade. <i>"Awesome work. I do not have any feedback
                   except that everything looks smooth and works as it should. Great job on adding all the extra
                   functionalities." Sandesh Pathak</i></p>
