--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
         <div class="col-lg-8 text-center">
           <h2 class="text-white mt-0">Let's Get In Touch!</h2>
           <hr class="divider light my-4">
-          <p class="text-white-50 mb-2">Ready to start your next project with me? Give us a call or send us an email and we
+          <p class="text-white-50 mb-2">Ready to start your next project with me? Give me a call or send me an email and I
             will get back to you as soon as possible!</p>
         </div>
       </div>
