--- a/index.html
+++ b/index.html
@@ -20,17 +20,18 @@
     rel='stylesheet' type='text/css'>
 
   <!-- Plugin CSS -->
-  <link href="vendor/magnific-popup/magnific-popup.css" rel="stylesheet">
+  <!--link href="vendor/magnific-popup/magnific-popup.css" rel="stylesheet"-->
 
   <!-- Theme CSS - Includes Bootstrap -->
   <link href="css/creative.css" rel="stylesheet">
 
   <!--<link href="css/creative.min.css" rel="stylesheet">-->
 
+  <link rel="preload" as="image" href="./img/sydney.jpg">
+
 </head>
 
 <body id="page-top">
-
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
     <div class="container">
@@ -123,11 +124,12 @@
         </div>
       </div>
       
+      <div class="pt-5"><!--top margin 5 -->
       <div class="row">
         <div class="col-lg-4 col-sm-6">
           <div class="card shadow">
             <a class="portfolio-box" href="https://jeqp.github.io/mixer-upper/" target="_blank">
-              <img src="./img/mixerupper.png" class="card-img-top">
+              <img src="./img/mixerupper.jpg" class="card-img-top">
               <div class="portfolio-box-caption">
                 <div class="project-category text-white-50">jQuery, Ajax and Google Map</div>
                 <div class="project-name">Mixer Upper</div>
@@ -138,7 +140,10 @@
               <p>Discover and create sophisticated cocktails. Cocktails can be searched and
                 provides instructions on how to prepare it. Shows Cocktail bars in Google Map using their API.  
               </p>
-              <p>Developed for Coding Boot Camp group work and received A+ grade.</p>
+              <p><i>"Your group's project not only meets the requirements but goes beyond them. 
+                It looks quite professional and the contributions appears to be balanced among the group members. 
+                Also, great to see that your contribution in the project is all over the place including both front end and back end which makes you a polymath of your group."  Sandesh Pathak </i></p>
+                Received A+ grade for a group work.</p>
               <a href="https://github.com/JEQP/mixer-upper" class="btn btn-outline-primary" target="_blank">Github repo</a>
               <a href="https://jeqp.github.io/mixer-upper/" class="btn btn-outline-primary" target="_blank">Demo</a>
             </div>
@@ -148,9 +153,9 @@
         <div class="col-lg-4 col-sm-6">
           <div class="card shadow">
             <a class="portfolio-box" href="https://tak-9.github.io/quiz/" target="_blank">
-              <img src="./img/quiz.png" class="card-img-top">
+              <img src="./img/quiz.jpg" class="card-img-top">
               <div class="portfolio-box-caption">
-                <div class="project-category text-white-50">JavaScript</div>
+                <div class="project-category text-white-50">JavaScript LocalStorage</div>
                 <div class="project-name">Coding Quiz</div>
               </div>
             </a>
@@ -159,9 +164,9 @@
               <p>Multiple on-line questions on Javascript and HTML. Answer the question within the specified time
                 frame
                 and record scores.</p>
-              <p>Developed for Coding Boot Camp and received A+ grade. 
                 <i>"Your user interface, design and the choice of sounds are great. " Sandesh Pathak</i></p>
-              <a href="https://github.com/tak-9/quiz" class="btn btn-outline-primary" target="_blank">Github repo</a>
+                <p>Received A+ grade.</p> 
+                  <a href="https://github.com/tak-9/quiz" class="btn btn-outline-primary" target="_blank">Github repo</a>
               <a href="https://tak-9.github.io/quiz/" class="btn btn-outline-primary" target="_blank">Demo</a>
             </div>
           </div>
@@ -170,9 +175,9 @@
         <div class="col-lg-4 col-sm-6">
           <div class="card shadow">
             <a class="portfolio-box" href="https://tak-9.github.io/weather/" target="_blank">
-              <img src="./img/weather.png" class="card-img-top">
+              <img src="./img/weather.jpg" class="card-img-top">
               <div class="portfolio-box-caption">
-                <div class="project-category text-white-50">jQuery and Ajax</div>
+                <div class="project-category text-white-50">Geolocation, jQuery and Ajax</div>
                 <div class="project-name">Weather Forecast</div>
               </div>
             </a>
@@ -180,15 +185,90 @@
               <h4 class="card-title"><a href="https://tak-9.github.io/weather/" target="_blank">Weather Forecast</a>
               </h4>
               <p>Shows weather forecast for next 5 days.</p>
-              <p>Developed for Coding boot camp and received A+ grade. <i>"Awesome work. I do not have any feedback
+              <i>"Awesome work. I do not have any feedback
                   except that everything looks smooth and works as it should. Great job on adding all the extra
                   functionalities." Sandesh Pathak</i></p>
+                  <p>Received A+ grade.</p>
               <a href="https://github.com/tak-9/weather" class="btn btn-outline-primary" target="_blank">Github repo</a>
               <a href="https://tak-9.github.io/weather/" class="btn btn-outline-primary" target="_blank">Demo</a>
             </div>
           </div>
         </div> 
-      </div>  
+      </div>  <!-- Row end -->
+      <div class="pt-5"><!--top margin 5 -->
+      <div class="row">
+        <div class="col-lg-4 col-sm-6">
+          <div class="card shadow">
+            <a class="portfolio-box" href="https://eat-da-burger-takuji.herokuapp.com/" target="_blank">
+              <img src="./img/burger.png" class="card-img-top">
+              <div class="portfolio-box-caption">
+                <div class="project-category text-white-50">Node.js,Express.js,Handlebars</div>
+                <div class="project-name">Eat-da-burger</div>
+              </div>
+            </a>
+            <div class="card-body">
+              <h4 class="card-title"><a href="https://eat-da-burger-takuji.herokuapp.com/" target="_blank">Eat-da-burger in MVC</a></h4>
+              <p>A burger logger with MySQL, Node.js, Express, Handlebars and a homemade ORM (yum!). Deployed on heroku.
+              </p>
+              <p>
+                <i>"Well documented readme, and appearance looks great. All the functionalities work too. " Sandesh Pathak</i>
+              </p>
+              <p>Received A+ grade.</p>
+              <a href="https://github.com/tak-9/burger" class="btn btn-outline-primary" target="_blank">Github repo</a>
+              <a href="https://eat-da-burger-takuji.herokuapp.com/" class="btn btn-outline-primary" target="_blank">Demo</a>
+            </div>
+          </div>
+        </div>
+  
+        <div class="col-lg-4 col-sm-6">
+          <div class="card shadow">
+            <a class="portfolio-box" href="https://github.com/tak-9/employee_db" target="_blank">
+              <img src="./img/employee.png" class="card-img-top">
+              <div class="portfolio-box-caption">
+                <div class="project-category text-white-50">Node.js, MySQL</div>
+                <div class="project-name">Employee Database</div>
+              </div>
+            </a>
+            <div class="card-body">
+              <h4 class="card-title"><a href="https://github.com/tak-9/employee_db" target="_blank">Employee Database</a></h4>
+              <p>A CLI application that manages Employee database. Developed with Node.js, Inquier.js, MySQL.</p>
+              <p>Received A+ grade.</p>
+              <a href="https://github.com/tak-9/employee_db" class="btn btn-outline-primary" target="_blank">Github repo</a>
+              <a href="https://github.com/tak-9/employee_db" class="btn btn-outline-primary" target="_blank">Demo</a>
+            </div>
+          </div>
+        </div>
+  
+        <div class="col-lg-4 col-sm-6">
+          <div class="card shadow">
+            <a class="portfolio-box" href="https://proficiency.herokuapp.com/" target="_blank">
+              <img src="./img/tutoring.png" class="card-img-top">
+              <div class="portfolio-box-caption">
+                <div class="project-category text-white-50">Node.js,ORM,MySQL,Handlebars</div>
+                <div class="project-name">Highschool Tutoring</div>
+              </div>
+            </a>
+            <div class="card-body">
+              <h4 class="card-title"><a href="https://github.com/tak-9/project2" target="_blank">Highschool Tutoring</a>
+              </h4>
+              <p>
+                <i>"Project meets all the requirements and also very professional. 
+                  The presentation was well done and the story behind the idea, challenges, and future goals were well articulated. 
+                  It is also obvious from your commits and code that you were the most valuable member in your group and would like to commend your contribution which seems invaluable." Sandesh Pathak</i></p>
+                  <p>Received A+ grade for a group work.</p>
+                  <p>
+                    Login using the following test users to see different view for each user type.<br>
+                    <code>
+                    Student ID: student@test.com, Passoword: 123 <br>
+                    Staff ID: teacher@test.com, Password: 123</p>
+                    </code>
+                  <a href="https://github.com/tak-9/project2" class="btn btn-outline-primary" target="_blank">Github repo</a>
+              <a href="https://proficiency.herokuapp.com/" class="btn btn-outline-primary" target="_blank">Demo</a>
+            </div>
+          </div>
+        </div> 
+      </div>  <!-- Row end -->
+
     </div>
   </section>
 
@@ -197,7 +277,7 @@
     <div class="container text-center">
       <h2 class="mb-4">See my Resume</h2>
       <hr class="divider light my-4">
-      <a class="btn btn-light btn-xl" href="2020-01-13_Takuji_Okubo_Resume.pdf" target="_blank"><i class="fa fa-file-pdf-o" style="font-size: 20px;"></i> &nbsp; Download Now!</a>
+      <a class="btn btn-light btn-xl" href="https://drive.google.com/open?id=12fbGO6GQBHAPG0pMpqKkDTUwXYbAoCSE" target="_blank"><i class="fa fa-file-pdf-o" style="font-size: 20px;"></i> &nbsp; Download Now!</a>
     </div>
   </section>
 
@@ -262,8 +342,9 @@
 
   <!-- Plugin JavaScript -->
   <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+  <!--
   <script src="vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
-
+  -->
   <!-- Custom scripts for this template -->
   <!-- <script src="js/creative.min.js"></script> -->
   <script src="js/creative.js"></script>
